# gaden_edit

./: .gitignore  alcohol_air_diffusion.m  ethanol_water_vapor.m  ethanol_water_vapor2.m  ethanol_water_vapor3.m  ethanol_water_vapor_plot.m
gaden_filament_simulator/: CMakeLists.txt  package.xml
gaden_filament_simulator/include/filament_simulator/: filament_simulator.h  single_filament_simulator.h
gaden_filament_simulator/src/: filament_simulator.cpp  single_filament_simulator.cpp
my_gaden_filament_simulator/gaden_filament_simulator/: CMakeLists.txt
my_gaden_filament_simulator/gaden_filament_simulator/include/filament_simulator/: filament_simulator.h  single_filament_simulator.h
my_gaden_filament_simulator/gaden_filament_simulator/src/: filament_simulator.cpp  single_filament_simulator.cpp
obstacle_avoidance/: CMakeLists.txt  package.xml
obstacle_avoidance/include/obstacle_avoidance/: obstacle_avoidance.h
obstacle_avoidance/src/: obstacle_avoidance.cpp
sim_drop_topic/: CMakeLists.txt  package.xml
sim_drop_topic/msg/: coorMsg.msg
sim_drop_topic/src/: drop_publisher.cpp
simulated_gas_sensor/src/: fake_gas_sensor.cpp  fake_gas_sensor.h
test_env/10x6_central_obstacle/: occupancy.pgm
test_env/10x6_central_obstacle/launch/: GADEN01.launch  GADEN01_gazebo.launch
test_env/10x6_central_obstacle/wind_simulations/1ms/: wind_at_cell_centers_0.csv_U  wind_at_cell_centers_0.csv_V  wind_at_cell_centers_0.csv_W
test_env/10x6_empty_room/: OccupancyGrid3D.csv  occupancy.pgm
test_env/10x6_empty_room/launch/: GADEN02.launch  GADEN_player02.launch
test_env/10x6_empty_room/wind_simulations/dynamic/: wind_at_cell_centers_0.csv_V  wind_at_cell_centers_1.csv_U  wind_at_cell_centers_1.csv_V  wind_at_cell_centers_1.csv_W  wind_at_cell_centers_10.csv_U  wind_at_cell_centers_10.csv_V  wind_at_cell_centers_10.csv_W  wind_at_cell_centers_11.csv_U  wind_at_cell_centers_11.csv_V  wind_at_cell_centers_11.csv_W  wind_at_cell_centers_12.csv_U  wind_at_cell_centers_12.csv_V  wind_at_cell_centers_12.csv_W  wind_at_cell_centers_13.csv_U  wind_at_cell_centers_13.csv_V  wind_at_cell_centers_13.csv_W  wind_at_cell_centers_14.csv_U  wind_at_cell_centers_14.csv_V  wind_at_cell_centers_14.csv_W  wind_at_cell_centers_15.csv_U  wind_at_cell_centers_15.csv_V  wind_at_cell_centers_15.csv_W  wind_at_cell_centers_16.csv_U  wind_at_cell_centers_16.csv_V  wind_at_cell_centers_16.csv_W  wind_at_cell_centers_17.csv_U  wind_at_cell_centers_17.csv_V  wind_at_cell_centers_17.csv_W  wind_at_cell_centers_18.csv_U  wind_at_cell_centers_18.csv_V  wind_at_cell_centers_18.csv_W  wind_at_cell_centers_19.csv_U  wind_at_cell_centers_19.csv_V  wind_at_cell_centers_19.csv_W  wind_at_cell_centers_2.csv_U  wind_at_cell_centers_2.csv_V  wind_at_cell_centers_2.csv_W  wind_at_cell_centers_20.csv_U  wind_at_cell_centers_20.csv_V  (+34 more)
test_env/gazebo_tutorial/launch/: my_world.launch
test_env/gazebo_tutorial/world/: empty_world.world
test_env/worlds/: myworld.world
(+302 files in other folders)
